--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Aiman Syafiq Zaini Web</title>
         <meta name="keywords" content="HTML5 Theme" />
-        <meta name="description" content="Megakit - HTML5 Theme">
+        <meta name="description" content="Aiman Syafiq Web">
         <meta name="author" content="keenthemes.com">
 
         <!-- Web Fonts -->
