--- a/HTML/index.html
+++ b/HTML/index.html
@@ -302,15 +302,15 @@
         <div class="js__parallax-window" style="background: url(07.jpg) 50% 0 no-repeat fixed;">
             <div class="g-container--sm g-text-center--xs g-padding-y-80--xs g-padding-y-125--sm">
                 <div class="g-margin-b-80--xs">
-                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--white-opacity g-letter-spacing--2 g-margin-b-25--xs">Subscribe Aiman Syafiq</p>
-                    <h2 class="g-font-size-32--xs g-font-size-36--md g-color--white">Join Over Most Of The People</h2>
+                    <p class="text-uppercase g-font-size-14--xs g-font-weight--700 g-color--black-opacity g-letter-spacing--2 g-margin-b-25--xs">Subscribe Aiman Syafiq</p>
+                    <h2 class="g-font-size-32--xs g-font-size-36--md g-color--black">Join Over Most Of The People</h2>
                 </div>
                 <div class="row">
                     <div class="col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1">
                         <form class="input-group">
                             <input type="email" class="form-control s-form-v1__input g-radius--left-50" name="email" placeholder="Enter your email">
                             <span class="input-group-btn">
-                                <button type="submit" class="s-btn s-btn-icon--md s-btn-icon--white-brd s-btn--white-brd g-radius--right-50"><i class="ti-arrow-right"></i></button>
+                                <button type="submit" class="s-btn s-btn-icon--md s-btn-icon--black-brd s-btn--black-brd g-radius--right-50"><i class="ti-arrow-right"></i></button>
                             </span>
                         </form>
                     </div>
